--- a/css/style.css
+++ b/css/style.css
@@ -960,6 +960,10 @@ button {
         padding: 0 1rem;
     }
     
+    .tags-section {
+        display: none;
+    }
+    
     .hero {
         padding: 7rem 1rem 3rem;
     }
